--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/global.css">
-        <link rel="stylesheet" href="css/portafolio.css">
+        <link rel="stylesheet" href="portafolio.css">
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
