--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Drag.init(document.getElementById("drag"));
                         <div class="circle"></div>
                     </div>
                     </div>-->
-        <!--<div class="pie">
+        <div class="pie">
         <div align="center">
         <br>
             Nicolle Bustos<br>
@@ -67,7 +67,7 @@ Drag.init(document.getElementById("drag"));
             nicolle.org@gmail.com<br>
             Barranquilla, Colombia
         </div>
-        </div>-->
+        </div>
         </main>
         </body>
 
