--- a/portafolio.html
+++ b/portafolio.html
@@ -34,7 +34,7 @@
                     <center>
                     <h2><a href="portafolio3.html">Título Proyecto</a></h2>
                     <p>Branding / 2015<br><br>
-                    <a href="#">VER MÁS...</a></p>
+                    <a href="portafolio3.html">VER MÁS...</a></p>
                     </center>
                 </div>  
               </div>
