--- a/contacto.html
+++ b/contacto.html
@@ -15,14 +15,16 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/global.css">
-        <link rel="stylesheet" href="contacto.css">
+        <link rel="stylesheet" href="css/contacto.css">
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'>
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        
     </head>
     <body>
 <header>
-<nav><figure><a href="index.html"><h1>Nicolle Bustos</h1></a></figure> <br><br>
+<nav><figure><a href="index.html"><br><img src="img/logo.svg"></a></figure> <br><br>
 <ul>
     <li><a href="index.html"><i class="fa fa-circle-o"></i></a></li>
     <li><a href="portafolio.html"><b></b></a></li>
@@ -30,10 +32,11 @@
 </ul>    
 </nav>       
 </header>
+        <div class="parallax-window" data-parallax="scroll" data-image-src="img/contacto-01.jpg"></div>
         <div id="contacto">
-                <center><br><br><br><br><br><br><br><br><br>
+                <center><br><br><br><br><br><br><br>
                     <div align="center">
-                    <h1>Contáctame</h1>
+                    <h1>Escríbeme</h1>
                     </div>
                 <div id="contact-area"><br><br>
 			
@@ -55,21 +58,21 @@
 		</div>
                 </center>
             </div>
-        <div class="pie">
+         <div class="pie">
         <div align="center">
-        <br>
+        <br><br><br><br><br>
+        <h1>Contáctame</h1><br><br>
             Nicolle Bustos<br>
+            Barranquilla, Colombia<br><br>
             3006609683<br>
-            nicolle.org@gmail.com<br>
-            Barranquilla, Colombia
+            nicolle.org@gmail.com
         </div>
         </div>
         </body>
 
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/prefixfree.min.js"></script>
-        <script src="js/main.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="parallax.js-1.3.1/parallax.js"></script>
+<script src="parallax.js-1.3.1/parallax.min.js"></script>
     
 </html>
 
