--- a/bohemia.html
+++ b/bohemia.html
@@ -13,7 +13,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/global.css">
-        <link rel="stylesheet" href="css/bohemia.css">
+        <link rel="stylesheet" href="bohemia.css">
         <link rel="stylesheet" media="@media screen and (max-width: 480px)" href="mobile/css/arteiraca.css">
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'>
